--- a/index.html
+++ b/index.html
@@ -162,9 +162,10 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <h2 class="w3-text-light-grey">Contact Me</h2>
     <hr style="width:200px" class="w3-opacity">
 
-    <div class="w3-section">
+    <br class="w3-section">
       <p><i class="fa fa-map-marker fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> Chicago, US</p>
-      <a href="tel:/+919961247988"><i class="fa fa-phone fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> Phone: +91 9961247988</a>
+      <a href="tel:/+919961247988"><i class="fa fa-phone fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> Phone: +91 9961247988</a></br>
+      <a href="https://wa.me/+919961247988"><i class="fa fa-whatsapp fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> Whatsapp: +91 9961247988</a></br>
       <a href="mailto:ajilalmaniyoli@gmail.com"><i class="fa fa-envelope fa-fw w3-text-white w3-xxlarge w3-margin-right"> </i> Email: ajilalmaniyoli@gmail.com</a>
     </div><br>
     <p>Let's get in touch. Send me a message:</p>
